--- a/CodeBlatt6.html
+++ b/CodeBlatt6.html
@@ -71,7 +71,6 @@
                 alert('Unable to initialize WebGL. Your browser or machine may not support it.');
                 return;
             }
-
             // Vertex shader program
             const vsSource = `
               //set precision of floats in vertex buffer
@@ -98,16 +97,20 @@
               varying vec3 vPosition;
               varying vec3 vNormal;
               varying vec3 vColor;
-              void main(void){
+
+              void main(void) {
+
                 gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
-                //nur zum test für git
+                vColor = aVertexColor;
+                vPosition = (uModelViewMatrix * aVertexPosition).xyz;
+                vNormal = normalize((uNormalMatrix * aVertexNormal).xyz);
               }
 
 
 // END MUSTERLOESUNG AUFGABE 2b
             `;
 
-
+            // TODO aufgabe 2c
             // Fragment shader program
             const fsSource = `
                 precision mediump float;
@@ -302,8 +305,8 @@
                 16, 17, 18,     16, 18, 19,   // right
                 20, 21, 22,     20, 22, 23,   // left
             ];
-
 // BEGIN MUSTERLOESUNG AUFGABE 2a
+
             const positionBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
@@ -312,16 +315,13 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, normalBuffer);
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertexNormals), gl.STATIC_DRAW);
 
-            const colorBuffer = gl.createBuffer;
+            const colorBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(faceColors), gl.STATIC_DRAW);
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 
             const indexBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW);
-
-
-
 
 // END MUSTERLOESUNG AUFGABE 2a
 
