--- a/CodeBlatt6.html
+++ b/CodeBlatt6.html
@@ -93,7 +93,6 @@
               uniform mat4 uModelViewMatrix;
               uniform mat4 uProjectionMatrix;
 
-// BEGIN MUSTERLOESUNG AUFGABE 2b
               varying vec3 vPosition;
               varying vec3 vNormal;
               varying vec3 vColor;
@@ -105,12 +104,8 @@
                 vPosition = (uModelViewMatrix * aVertexPosition).xyz;
                 vNormal = normalize((uNormalMatrix * aVertexNormal).xyz);
               }
-
-
-// END MUSTERLOESUNG AUFGABE 2b
             `;
 
-            // TODO aufgabe 2c
             // Fragment shader program
             const fsSource = `
                 precision mediump float;
@@ -131,11 +126,19 @@
                 varying vec3 vColor;
 
                 void main(void) {
-                    gl_FragColor = vec4(0.0,0.0,0.0,1.0);
+                    vec3 ambient = uCAmbient * uLightColor * vColor;
 
-// BEGIN MUSTERLOESUNG AUFGABE 2c
+                    vec3 n = normalize(vNormal);
+                    vec3 l = normalize(uLightPos - vPosition);
+                    float diffCo = max(dot(n, l), 0.0);
+                    vec3 diffuse = uCDiffuse * vColor.rgb * diffCo * uLightColor;
 
-// END MUSTERLOESUNG AUFGABE 2c
+                    vec3 v = normalize(uCamPos - vPosition);
+                    vec3 h = normalize(l + v);
+                    float cosTheta = max(dot(n, h), 0.0);
+                    vec3 specular = uCSpecular * pow(cosTheta, uShine) * uLightColor;
+
+                    gl_FragColor = vec4(ambient + diffuse + specular, 1.0);
                 }
             `;
 
